--- a/section-02-css/03-fonts.html
+++ b/section-02-css/03-fonts.html
@@ -27,7 +27,9 @@
         /* font-family: Arial, Helvetica, sans-serif; */
 
         /* Google Fonts */
-        /* font-family: "Roboto", sans-serif; */
+        font-family: "Roboto", Arial, sans-serif;
+        font-weight: 100;
+        /* font-style: italic; */
       }
 
       .primary-heading {
@@ -38,6 +40,7 @@
   <body>
     <div id="welcome">
       <h2 class="primary-heading">Welcome</h2>
+      <i>HELLO XAVI</i>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
         corrupti corporis vel, <span>WU TANG </span> animi est neque magnam.
@@ -53,7 +56,7 @@
         temporibus.
       </h2>
       <h2 class="external-google-font-declaration-with-link-inside-html">
-        Wu Tang Clan, is for the children
+        Wu Tang Clan, is for the children - EXTERNALLL
       </h2>
     </div>
 
