--- a/section-02-css/02-selectors.html
+++ b/section-02-css/02-selectors.html
@@ -57,7 +57,7 @@
         color: green;
       }
 
-      /* LESSON 2 - WEDNESDAY 09 11 2022 */
+      /* LESSON 2 - Thursday January 12, 2023 */
 
       /* GROUPING CSS SELECTORS */
       /* Con el selector de agrupación, puede seleccionar y aplicar estilo a más de un elemento a la vez. */
