--- a/section-02-css/02-selectors.html
+++ b/section-02-css/02-selectors.html
@@ -58,6 +58,11 @@
       }
 
       /* LESSON 2 - Thursday January 12, 2023 */
+      /* .... */
+      /* .... */
+      /* .... */
+      /* .... */
+      /* START HERE */
 
       /* GROUPING CSS SELECTORS */
       /* Con el selector de agrupación, puede seleccionar y aplicar estilo a más de un elemento a la vez. */
