class - js - conditionals - pre excerciset

--- a/section-03-js/02-js-master.html
+++ b/section-03-js/02-js-master.html
@@ -89,6 +89,6 @@
         </div>
       </div>
     </section>
-    <script src="./06-operators.js"></script>
+    <script src="./07-conditionals.js"></script>
   </body>
 </html>
