class - js - functions

--- a/section-03-js/02-js-master.html
+++ b/section-03-js/02-js-master.html
@@ -89,6 +89,6 @@
         </div>
       </div>
     </section>
-    <script src="./08-loops.js"></script>
+    <script src="./09-functions.js"></script>
   </body>
 </html>
