--- a/section-03-js/02-js-master.html
+++ b/section-03-js/02-js-master.html
@@ -89,6 +89,6 @@
         </div>
       </div>
     </section>
-    <script src="./12-number-methods.js"></script>
+    <script src="./13-dom-manipulation.js"></script>
   </body>
 </html>
