class - js - DOM Manipulation Intro

--- a/section-03-js/02-js-master.html
+++ b/section-03-js/02-js-master.html
@@ -24,6 +24,18 @@
         width: 70%;
         height: 50%;
       }
+
+      #dom-manipulation h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      p,
+      a,
+      div {
+        font-size: 48px;
+      }
     </style>
   </head>
   <body>
@@ -80,6 +92,7 @@
           </p>
         </div>
         <hr />
+        <div id="i-am-a-even-cooler-sibling-because-i-came-first"></div>
         <div id="traverse-document">
           <div id="firstchild">i am a first child</div>
           <p id="second-child">i am the second child</p>
@@ -87,8 +100,10 @@
           <h3>Wu Tang Clan, is for the children</h3>
           <p>My name is Aragorn, son Arathorn II and Gilraen.</p>
         </div>
+        <div id="i-am-a-cool-sibling"></div>
       </div>
     </section>
+    <h5>Fito Paez es menor que Charly Garcia ?</h5>
     <script src="./13-dom-manipulation.js"></script>
   </body>
 </html>
