class - js - DOM Class - Part 2 - Excercises

--- a/section-03-js/14-dom.html
+++ b/section-03-js/14-dom.html
@@ -49,18 +49,31 @@
       .remove-test2 {
         background: #5c6eac;
       }
+
+      button {
+        padding: 1rem;
+        font-size: 48px;
+        border-radius: 16px;
+      }
     </style>
   </head>
   <body class="">
     <div id="parent">
       <div id="firstchild">I love pizza</div>
       <p id="secondchild">I like to watch fireship on youtube</p>
+      <p class="secondChild">I like to watch fireship on youtube</p>
       <h4>I love playing guitar</h4>
-      <h1>C.R.E.A.M</h1>
+      <h1 class="removeMe">C.R.E.A.M</h1>
       <p>I am the last one on this list....</p>
     </div>
+
     <button id="master">Click me</button>
-    <div class="box-display remove-test">remove test</div>
+    <div class="box-display remove-test toggle-test">remove test</div>
+
+    <!-- class-excercise -->
+    <!-- Excercise 001 -->
+    <div id="insert-p"></div>
+
     <script src="./15-dom-manipulation-2.js"></script>
   </body>
 </html>
