events excercise added

--- a/section-03-js/14-dom.html
+++ b/section-03-js/14-dom.html
@@ -55,6 +55,9 @@
         font-size: 48px;
         border-radius: 16px;
       }
+
+      .green-box {
+      }
     </style>
   </head>
   <body class="">
@@ -70,9 +73,16 @@
     <button id="master">Click me</button>
     <div class="box-display remove-test toggle-test">remove test</div>
 
+    <h2>CLASS EXCERCISES</h2>
+    <hr />
     <!-- class-excercise -->
     <!-- Excercise 001 -->
     <div id="insert-p"></div>
+
+    <div id="block-002">
+      <!-- Iteration 001 -->
+      <div id="itOne"></div>
+    </div>
 
     <script src="./15-dom-manipulation-2.js"></script>
   </body>
