--- a/section-03-js/16-dom-events.html
+++ b/section-03-js/16-dom-events.html
@@ -10,10 +10,13 @@
   <body class="bg-gradient-to-r from-gray-100 to-blue-100">
     <section class="py-2">
       <div class="p-4">
-        <h1 class="text-center text-xl font-bold ruben-example cursor-pointer hover:text-blue-500">Que son eventos del browser?</h1>
-        <a href="#alexisGS">
-          <h1 class="text-center text-xl font-bold cursor-pointer hover:text-blue-500">Que son eventos del browser?</h1>
+        <h1 class="text-center text-xl font-bold  cursor-pointer hover:text-blue-500">Que son eventos del browser?</h1>
+        <div class="m-4 flex justify-center">
+          <button class="ruben-example p-4 bg-blue-500 text-center">Scroll using js - smooth</button>
+        <a href="#alexisGS"><button class="p-4 bg-red-500 text-center">Scroll using ID element through a tag</button>
         </a>
+        
+        </div>
         <p>Une vento se refiere a una accion dentro del programa.</p>
         <p>Vamos a enfocarnos en eventos en contexto al browswer.</p>
         <p>
