--- a/section-03-js/17-events-excercise.html
+++ b/section-03-js/17-events-excercise.html
@@ -20,6 +20,8 @@
     <h1 id="ex1h1">Todavía no me han modificado</h1>
     <button id="ex1btn">Click me now please!!</button>
 
+    <input type="text" value="" placeholder="I am a cool placeholder" />
+
     <!-- Ejercicio 2 -->
     <h1 id="ex2h1">OFF</h1>
     <button id="ex2btn">encender</button>
@@ -48,6 +50,22 @@
       const ex1h1 = document.getElementById("ex1h1");
       const ex1btn = document.getElementById("ex1btn");
 
+      // V001
+      // Arrow function - metodo addEventListener(), con el tipo de evento + la funcion
+      // const changeText = () => (ex1h1.innerText = "Ya me han dado un click");
+      // ex1btn.addEventListener("click", changeText);
+
+      // V002
+      // apuntando directo la variable, concatenamos, el metodo eventlistener() y en vez de llamar a una funcion, ejecutamos una expression(funcion sin nombre autoEJecutable) para que se ejecute el contenido dentro y dentro podemos llamar a la variable del h1 y con la propiedad innerText le cambiamos el valor del texto.
+      // ex1btn.addEventListener(
+      //   "click",
+      //   () => (ex1h1.innerText = "Ya me han dado un click")
+      // );
+
+      // V003
+      // apuntamos a la variable y omitimos el metodo de eventListener y le pasamos directo el tipo de evento que queremos + una expression mediante una funcion tipo flecha y dentro podemos llamar a la variable del h1 y con la propiedad innerText le cambiamos el valor del texto.
+      ex1btn.onclick = () => (ex1h1.innerText = "Ya me han dado un click");
+
       // Ejercicio 2. Toggle.
       // Imaginemos que tenemos un pequeño aparato que se puede encender y apagar con un botón.
       // Vamos a crear un <h1> que contendrá el texto "OFF". Debajo colocaremos un botón que contenga el texto "encender". De momento nuestro aparato está apagado.
@@ -55,6 +73,41 @@
 
       const ex2h1 = document.getElementById("ex2h1");
       const ex2btn = document.getElementById("ex2btn");
+
+      // V001
+      // ex2btn.addEventListener("click", () => {
+      //   if (ex2h1.innerText === "OFF") {
+      //     ex2h1.innerText = "ON";
+      //     ex2btn.innerText = "OFF";
+      //   } else {
+      //     ex2h1.innerText = "OFF";
+      //     ex2btn.innerText = "encender";
+      //   }
+      // });
+      // V002
+      // ex2btn.onclick = () => {
+      //   if (ex2h1.innerText === "OFF") {
+      //     ex2h1.innerText = "ON";
+      //     ex2btn.innerText = "OFF";
+      //   } else {
+      //     ex2h1.innerText = "OFF";
+      //     ex2btn.innerText = "encender";
+      //   }
+      // };
+
+      //V003
+      ex2btn.onclick = () => {
+        switch (ex2h1.innerText) {
+          case "OFF":
+            ex2h1.innerText = "ON";
+            ex2btn.innerText = "OFF";
+            break;
+          case "ON":
+            ex2h1.innerText = "OFF";
+            ex2btn.innerText = "encender";
+            break;
+        }
+      };
 
       // Ejercicio 3. Contador.
       // Vamos a crear un pequeño contador que sume y reste valores. Primero crearemos un <h1> con un valor inicial de '0'. Después crearemos CUATRO botones: el primero será "Doble click -2", el segundo "Click -1", el tercero "Click +1" y el cuarto "Doble click +2".
@@ -67,12 +120,45 @@
       const ex3btn3 = document.getElementById("ex3btn3");
       const ex3btn4 = document.getElementById("ex3btn4");
 
+      // V001
+
+      // Restar 2
+      ex3btn1.addEventListener("dblclick", () => {
+        ex3h1.innerText = parseInt(ex3h1.innerText) - 2;
+      });
+
+      // Sumar 2
+      ex3btn4.addEventListener("dblclick", () => {
+        ex3h1.innerText = parseInt(ex3h1.innerText) + 2;
+      });
+
+      // Resta 1
+      ex3btn2.addEventListener("click", () => {
+        ex3h1.innerText = parseInt(ex3h1.innerText) - 1;
+      });
+
+      // Suma 1
+      ex3btn3.addEventListener("click", () => {
+        ex3h1.innerText = parseInt(ex3h1.innerText) + 1;
+      });
+
       // Ejercicio 4. Class Toggle
       // Creamos un botón que tenga una clase "green" y un texto como 'I'm green'.
       // Cuando el user dé click al botón, deberíamos cambiar el texto del botón por 'I'm red' y su color para que sea rojo.
       // Cuando el botón sea rojo y el user le vuelva a dar, deberíamos volver a setearlo a su estado inicial.
 
       const ex4btn = document.getElementById("ex4btn");
+
+      ex4btn.addEventListener("click", () => {
+        // ex4btn.classList.toggle("red");
+        if (ex4btn.innerText === "I'm green") {
+          ex4btn.innerText = "I'm red";
+          ex4btn.classList.toggle("red");
+        } else {
+          ex4btn.innerText = "I'm green";
+          ex4btn.classList.remove("red");
+        }
+      });
 
       // Ejercicio 5. Añadir a listas con inputs - ADVANCED
       // Vamos a crear una ordered list que no contenga ningún elemento. Después creamos un input y un botón que contenga el texto "Añadir".
@@ -82,6 +168,22 @@
       const list = document.querySelector("ol");
       const input = document.getElementById("input");
       const ex5btn = document.getElementById("ex5btn");
+
+      ex5btn.addEventListener("click", () => {
+        console.log(input.value);
+        if (!input.value) {
+          input.placeholder =
+            "yo yo yo my man, chill, add some text into this input";
+          setTimeout(() => {
+            input.placeholder = "";
+          }, 2000);
+        } else {
+          let listItem = document.createElement("li");
+          listItem.innerText = input.value;
+          list.appendChild(listItem);
+          input.value = "";
+        }
+      });
     </script>
   </body>
 </html>
