--- a/section-03-js/fetchApi/index.html
+++ b/section-03-js/fetchApi/index.html
@@ -17,11 +17,11 @@
     <h1>Fetch Api Class - January 23, 2023</h1>
     <button id="getText">Get Text</button>
     <button id="getJson">Get Json</button>
-    <button id="getHere">Get Info from API</button>
+    <button id="getExternalApi">Get Info from API</button>
     <hr />
     <div id="output"></div>
 
-    <!-- <form id="addPost">
+    <form id="addPost">
       <div>
         <input type="text" id="title" placeholder="Enter post title!!" />
       </div>
@@ -34,7 +34,8 @@
         ></textarea>
       </div>
       <input type="submit" />
-    </form> -->
+    </form>
+    <form></form>
     <script src="index.js"></script>
   </body>
 </html>
