fetch api class exercise - to do in 35 mins

--- a/section-03-js/18-api-excercise.html
+++ b/section-03-js/18-api-excercise.html
@@ -10,5 +10,5 @@
     <input type="number" id="pokemonId" min="0" max="151" />
     <button onclick="searchById()">Pokenea!</button>
   </body>
-  <script src=""></script>
+  <script src="./18-api-excercise.js"></script>
 </html>
