--- a/midterm-boiler-plates/midterm-project-boiler/index.html
+++ b/midterm-boiler-plates/midterm-project-boiler/index.html
@@ -7,6 +7,5 @@
     <title>Circle Agency</title>
     <link rel="stylesheet" href="resources/styles/style.css" />
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
