--- a/labs/JS/functions-and-arrays/functions-and-arrays-finished/index.html
+++ b/labs/JS/functions-and-arrays/functions-and-arrays-finished/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <script src="./src/functions-and-arrays.js"></script>
-</body>
+  <script src="./tests/functions-and-arrays.spec.js"></script>
+</body
 </html>
