--- a/section-01-html/15-forms.html
+++ b/section-01-html/15-forms.html
@@ -173,12 +173,12 @@
         <td>< form > < / form ></td>
         <td>
           <form id="exampleForm">
-            <label for="name">First name:</label><br />
+            <label for="namez">First name:</label><br />
             <input
               type="text"
-              id="formName"
               name="name"
-              placeholder="Enter name Here"
+              placehozlder="Enter name Here"
+              id="namez"
             /><br />
             <label for="lastName">Last name:</label><br />
             <input
