--- a/section-03-js/fetchApi/index.html
+++ b/section-03-js/fetchApi/index.html
@@ -35,7 +35,7 @@
       </div>
       <input type="submit" />
     </form>
-    <form></form>
+    <!-- <form></form> -->
     <script src="index.js"></script>
   </body>
 </html>
